--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
     "jwt-decode": "^3.1.2",
+    "material-table": "^1.69.3",
     "material-ui-image": "^3.3.2",
     "material-ui-search-bar": "^1.0.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
+    "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
