--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
     "material-table": "^1.69.3",
     "material-ui-image": "^3.3.2",
     "material-ui-search-bar": "^1.0.0",
